# esphome-s3km1110

./: .gitignore  CLAUDE.md  PINOUT.md  PORTING_GUIDE.md  README.md  esp32-s3-mmwave.yaml  secrets.yaml.example
c5-zigbee/: CMakeLists.txt  partitions_ota.csv  sdkconfig.defaults
c5-zigbee/main/: CMakeLists.txt  main.c
c5-zigbee/main/core/: compat_stubs.h  device_state.h  gateway_buffer_sizes.h  ha_constants.h
c5-zigbee/main/led/: led_controller.c  led_controller.h  led_effects.h
c5-zigbee/main/uart/: uart_bridge.c  uart_bridge.h
c5-zigbee/main/utils/: json_utils.h  version.c
c5-zigbee/main/zigbee/: zb_alarms.c  zb_alarms.h  zb_availability.c  zb_binding.c  zb_binding.h  zb_callbacks.c  zb_cluster_closures.h  zb_cluster_electrical.c  zb_cluster_electrical.h  zb_cluster_measurement.c  zb_cmd_retry.c  zb_constants.h  zb_coordinator.c  zb_coordinator.h  zb_demand_response.c  zb_device_handler.c  zb_device_handler_internal.h  zb_device_handler_types.h  zb_diagnostics.h  zb_groups.c  zb_groups.h  zb_interview.c  zb_interview.h  zb_network.h  zb_poll_control.c  zb_router.c  zb_router.h  zb_scenes.c  zb_time_server.c  zb_tuya.c  zb_tuya.h  zb_zcl_helpers.c
c5-zigbee/main/zigbee/tuya/: tuya_device_driver.h  tuya_fingerbot.c
c5-zigbee/main/zigbee/xiaomi/: aqara_vibration.c  aqara_vibration.h  xiaomi_tlv.h
c5plus-zigbee/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
c5plus-zigbee/main/: CMakeLists.txt  Kconfig.projbuild  main.c
c5plus-zigbee/main/core/: command_handler.c  command_handler.h  device_state.c  gateway_defaults.h  gateway_timeouts.h
c5plus-zigbee/main/uart/: uart_bridge.h
c5plus-zigbee/main/utils/: freertos_helpers.h  json_helpers.h  json_utils.c  version.h
c5plus-zigbee/main/wifi/: wifi_manager.c  wifi_manager.h
c5plus-zigbee/main/zigbee/: zb_backup.c  zb_backup.h  zb_callbacks.c  zb_callbacks.h  zb_cluster_closures.c  zb_cluster_internal.h  zb_cluster_measurement.h  zb_cluster_security.c  zb_cluster_security.h  zb_cmd_retry.h  zb_diagnostics.c  zb_green_power.c  zb_green_power.h  zb_hvac_dehumid.c  zb_multi_pan.c  zb_multi_pan.h  zb_network.c  zb_ota.c  zb_poll_control.h  zb_reporting.c  zb_reporting.h  zb_scenes.h  zb_time_server.h  zb_topology.c  zb_touchlink.c  zb_unit_scales.h  zb_zcl_helpers.h
c5plus-zigbee/main/zigbee/tuya/: tuya_fingerbot.h
c5plus-zigbee/main/zigbee/xiaomi/: xiaomi_tlv.c
case/: README.md  esp32_devkit_case.scad  render.sh
components/esp_zb_coordinator/: CMakeLists.txt  Kconfig  README.md
components/esp_zb_coordinator/include/: zb_hal.h
components/esp_zb_coordinator/platform/esp32c5/: zb_hal_c5.c
components/esp_zb_coordinator/platform/esp32h2/: zb_hal_h2.c
components/esp_zb_coordinator/src/core/: command_handler.c  device_state.c  device_state.h  zb_hal_led.c
components/esp_zb_coordinator/src/ota/: uart_ota.c  uart_ota.h
components/esp_zb_coordinator/src/uart/: uart_bridge.c  uart_protocol.c  uart_protocol.h
components/esp_zb_coordinator/src/utils/: json_utils.c  json_utils.h
components/esp_zb_coordinator/src/zigbee/: zb_alarms.c  zb_availability.c  zb_availability.h  zb_backup.c  zb_binding.c  zb_callbacks.c  zb_cluster_hvac.c  zb_cluster_hvac.h  zb_cmd_retry.c  zb_constants.h  zb_coordinator.c  zb_demand_response.c  zb_demand_response.h  zb_device_handler.h  zb_diagnostics.c  zb_groups.c  zb_hvac_dehumid.h  zb_install_codes.c  zb_install_codes.h  zb_interview.c  zb_multi_pan.c  zb_network.c  zb_ota.c  zb_ota.h  zb_poll_control.c  zb_reporting.c  zb_router.c  zb_scenes.c  zb_topology.c  zb_topology.h  zb_touchlink.c  zb_touchlink.h  zb_tuya.c  zb_tuya.h
components/esp_zb_coordinator/src/zigbee/tuya/: tuya_device_driver.h  tuya_driver_registry.c  tuya_driver_registry.h  tuya_fingerbot.c
components/esp_zb_coordinator/src/zigbee/xiaomi/: aqara_vibration.c
components/ld2420/: ld2420.cpp  ld2420.h
components/zigbee_bridge/: __init__.py  automation.h  binary_sensor.py  mqtt_mode_switch.cpp  mqtt_mode_switch.h  switch.py  zigbee_bridge.cpp  zigbee_bridge.h
h2-zigbee/: CMakeLists.txt  partitions.csv  partitions_ota.csv  sdkconfig  sdkconfig.defaults
h2-zigbee/.cache/clangd/index/: esp_log.c.8AD573CD80E4BE88.idx  esp_zigbee_aps.h.AE2139EE0DEBD7C3.idx  esp_zigbee_attribute.h.7871299D0E887D1A.idx  esp_zigbee_bdb_commissioning.h.984216FF3474DB46.idx  esp_zigbee_bdb_touchlink.h.8F63DA6D7402B687.idx  esp_zigbee_cluster.h.992946C429FD4BBD.idx  esp_zigbee_core.h.8E514502E03D4EE5.idx  esp_zigbee_endpoint.h.F04FE3A43FD9A02A.idx  esp_zigbee_nwk.h.402D56AC5681EB8D.idx  esp_zigbee_ota.h.30CEBA53289FE22C.idx  esp_zigbee_platform.h.DD2DC6EB8539B40A.idx  esp_zigbee_secur.h.DCE1268E2DF2968C.idx  esp_zigbee_trace.h.3E08D53BCC451A5A.idx  esp_zigbee_type.h.B347547E45288AD2.idx  esp_zigbee_version.h.1A1822A15B6E3738.idx  esp_zigbee_zcl_alarms.h.FF0B0E0EB5D437C9.idx  esp_zigbee_zcl_analog_input.h.482031077E511786.idx  esp_zigbee_zcl_analog_output.h.898DD3ED386AF9F5.idx  esp_zigbee_zcl_analog_value.h.1CD646F4AB4BD3BE.idx  esp_zigbee_zcl_basic.h.E02BACB808432EE6.idx  esp_zigbee_zcl_binary_input.h.107E7D7C247716A3.idx  esp_zigbee_zcl_binary_output.h.41C7D18B59306440.idx  esp_zigbee_zcl_binary_value.h.3AF6AEFF6A2C0AD8.idx  esp_zigbee_zcl_carbon_dioxide_measurement.h.D83ED55719A9DD7D.idx  esp_zigbee_zcl_color_control.h.21572E0429698053.idx  esp_zigbee_zcl_command.h.16ED8FF783845146.idx  esp_zigbee_zcl_commissioning.h.CCA78A50AE8E563E.idx  esp_zigbee_zcl_common.h.B29346A0FE6EF4BC.idx  esp_zigbee_zcl_core.h.BC83D0F9AE9B9E6B.idx  esp_zigbee_zcl_dehumidification_control.h.7C9FBC901327B5BD.idx  esp_zigbee_zcl_device_temp_config.h.00087A62C143A824.idx  esp_zigbee_zcl_diagnostics.h.3F6E60AD6FD37911.idx  esp_zigbee_zcl_door_lock.h.29ECC06BEA9179EE.idx  esp_zigbee_zcl_drlc.h.FDB1A466344D3C58.idx  esp_zigbee_zcl_ec_measurement.h.AFA81086B85DF29C.idx  esp_zigbee_zcl_electrical_meas.h.8402847F28878B0A.idx  esp_zigbee_zcl_fan_control.h.26EB94B9D22CB833.idx  (+54 more)
h2-zigbee/main/: CMakeLists.txt  idf_component.yml  main.c
h2-zigbee/main/led/: led_controller.c  led_controller.h
h2-zigbee/main/uart/: uart_bridge.c
